--- a/app/mail/createquotation.html
+++ b/app/mail/createquotation.html
@@ -1,3 +1,4 @@
-<p><strong>Dear Team Marketing</strong><br><br>Agent dengan nama : <strong>{{Name}}&nbsp;</strong></p>
-<p>Telah membuat Quotation baru (ID Quotation : {{QuotationID}}) melalui aplikasi Agent On The GO (AOTG). Mohon lakukan pengecekan melalui Aplikasi Mobile/ Web <a href="{{LinkBackOffice}}">(Klik Disini)</a> untuk Quotation tersebut agar dapat segera dilakukan Approve/Reject</p>
+<p><strong>Dear Team Marketing</strong></p>
+<p>Mail ini memberitahukan bahwa Agent telah Membuat Quotation baru (ID Quotation : {{QuotationID}}) melalui aplikasi Agent On The GO (AOTG). Mohon lakukan pengecekan melalui Aplikasi Mobile/ Web <a href="{{LinkBackOffice}}">(Klik Disini)</a> untuk Quotation tersebut agar dapat segera dilakukan Approve/Reject</p>
 <p><br><br>Terima Kasih<br><br><br>Team IT AOTG</p>
+<p><br></p>
